Separated sign-in UI
into username input UI and password input UI
and re-factored session access

Closes #28
